--- a/templates/comunityList.html
+++ b/templates/comunityList.html
@@ -6,7 +6,6 @@
     <title>팜팜</title>
     <link rel="stylesheet" href="/static/css/List.css">
     <script src="/static/js/list.js" defer></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -138,6 +137,9 @@
             <div class="Menu">
                 <div class="Tools">
                     <div class="Search">
+                        <div class="input">
+                            <input type="text" placeholder="검색어를 입력하세요." id="mysearch" />
+                        </div>
                         <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
                     </div>
                     <p class="signIn">로그인</p>
@@ -147,7 +149,7 @@
                     <div class="MainMenu">약국찾기</div>
                     <div class="MainMenu">보유약국 찾기</div>
                     <div class="MainMenu">커뮤니티</div>
-                    <div class="MainMenu">구경하기</div>
+                    <div class="MainMenu">상담하기</div>
                 </nav>
             </div>
         </header>
