--- a/static/css/join.css
+++ b/static/css/join.css
@@ -65,7 +65,7 @@ body {
     border: none;
     box-sizing: border-box;
     font-weight: 400;
-    font-family: 'Montserrat', 'Pretendard', sans-serif;
+    font-family: 'Pretendard-SemiBold';
     transition: .1s;
   }
   
@@ -93,7 +93,7 @@ body {
     border: 0.03rem solid #d9d6d6;
     color: #383838;
     font-weight: 400;
-    font-family: 'Pretendard-SemiBold';
+    font-family: 'Pretendard-Medium';
   }
   
   .box::placeholder {
