--- a/static/css/login.css
+++ b/static/css/login.css
@@ -46,7 +46,9 @@ a {
     color: inherit;
 }
 
-
+html {
+  font-size: 16px;
+}
 
 * {
     margin: 0;
@@ -64,7 +66,7 @@ a {
   .login-form h1 {
     font-size: 2rem;
     text-align: center;
-    margin-bottom: 3rem;
+    margin-bottom: 0.5rem;
     font-family: 'Pretendard-Bold';
   }
   
@@ -94,6 +96,8 @@ a {
     top: 1.2rem;
     font-size: 1.2rem;
     transition: top 0.5s ease;
+
+    font-family: 'Pretendard-Regular';
   }
   
   .int-area label.warning {
@@ -122,6 +126,7 @@ a {
     top: -2px;
     font-size: 13px;
     color: #005AAC;
+    font-family: 'Pretendard-Regular';
   }
   
   .btn-area {
@@ -132,13 +137,20 @@ a {
     width: 100%;
     height: 3.5rem;
     color: #fff;
-    background: #166caa;
+    background: #005AAC;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     border: none;
-    border-radius: 1.5rem;
+    border-radius: 0.5rem;
     font-size: 1.3rem;
     cursor: pointer;
+
+    font-family: 'Pretendard-Medium';
+
+    transition: all 0.2s ease-in-out;
   }
-  
+  .btn-area button:hover {
+    background-color: #0059ace8;
+  }
   .caption {
     margin-top: 1.3rem;
     text-align: center;
