--- a/templates/animal.html
+++ b/templates/animal.html
@@ -10,52 +10,46 @@
 <body style="width:100%; height: 100%; overflow-x:hidden;  overflow-y:hidden;">
     <hr class="hr1"/>
     <main>
-        <main class="text">
-            증상을 선택해주세요.
-        </main>
+        <h2>증상을 선택해주세요.</h2>
         <p class="normal">일반동물</p>
-        <p class="special">희귀동물</p>
+        <div class="BoxWrap">
+            <div class="box">
+                <img class="image" src="/static/img/감기.png">
+                <p class="text">감기</p>
+            </div>
+            <div class="box">
+                <img class="image" src="/static/img/소화불량.png">
+                <p class="text">소화불량/구토</p>
+            </div>
+            <div class="box">
+                <img class="image" src="/static/img/심장사상충.png">
+                <p class="text">심장사상충 약</p>
+            </div>
+            <div class="box">
+                <img class="image" src="/static/img/구충제.png">
+                <p class="text">구충제</p>
+            </div>
+        </div>
         <hr class="hr2"/>
-        <div class="BOX">
-            <p class="box1">
-                <p class="text1">감기</p>
-            </p>
-            <p class="box2">
-                <p class="text2">소화불량/구토</p>
-            </p>
-            <p class="box3">
-                <p class="text3">심장사상충 약</p>
-            </p>
-            <p class="box4">
-                <p class="text4">구충제</p>
-            </p>
-            <p class="box5">
-                <p class="text5">기생충 약</p>
-            </p>
-            <p class="box6">
-                <p class="text6">항생제</p>
-            </p>
-            <p class="box7">
-                <p class="text7">설파제</p>
-            </p>
-            <p class="box8">
-                <p class="text8">영양제</p>
-            </p>
-
-            <img class="image1" src="/static/img/감기.png">
-            <img class="image2" src="/static/img/소화불량.png">
-            <img class="image3" src="/static/img/심장사상충.png">
-            <img class="image4" src="/static/img/구충제.png">
-            <img class="image5" src="/static/img/기생충.png">
-            <img class="image6" src="/static/img/항생제.png">
-            <img class="image7" src="/static/img/설파제.png">
-            <img class="image8" src="/static/img/영양제.png">
+        <p class="special">희귀동물</p>
+        <div class="BoxWrap">
+            <div class="box">
+                <img class="image" src="/static/img/기생충.png">
+                <p class="text">기생충 약</p>
+            </div>
+            <div class="box">
+                <img class="image" src="/static/img/항생제.png">
+                <p class="text">항생제</p>
+            </div>
+            <div class="box">
+                <img class="image" src="/static/img/설파제.png">
+                <p class="text">설파제</p>
+            </div>
+            <div class="box">
+                <img class="image" src="/static/img/영양제.png">
+                <p class="text">영양제</p>
+            </div>
         </div>  
-
-        <div class="sideBox">
-            <p class="H">H</p>
-            <p class="A">A</p>
-        </div> 
     </main>
 </body>
 </html>
