--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 <body>
     <body>
         <section class="login-form">
-            <h1>Pharm Pharm</h1>
+            <h1><img src="/static/img/logo.png" width="150px"></h1>
             <form action="">
                 <div class="int-area">
                     <input type="text" name="id" id="id" autocomplete="off" required>
