--- a/templates/comunityList.html
+++ b/templates/comunityList.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>팜팜</title>
     <link rel="stylesheet" href="/static/css/List.css">
+    <link rel="stylesheet" href="/static/css/header.css">
     <script src="/static/js/list.js" defer></script>
+    <script src="/static/js/header.js" defer></script>
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
