--- a/templates/human.html
+++ b/templates/human.html
@@ -7,51 +7,49 @@
     <link rel="stylesheet" href="/static//css/human.css">
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <body style="width:100%; height: 100%; overflow-x:hidden;  overflow-y:hidden;"></body>
+<body style="width:100%; height: 100%; overflow-x:hidden;  overflow-y:hidden;">
     <hr class="hr1"/>
     <main>
-        <main class="text">
-            증상을 선택해주세요.
-        </main>
-        <div class="BOX">
-            <p class="box1">
-                <p class="text1">감기</p>   
-            </p>
-            <img class="image1" src="./img/감기.png">
-            <p class="box2">
-                <p class="text2">복통/소화불량</p>
-            </p>
-            <img class="image2" src="./img/복통.png">
-            <p class="box3">
-                <p class="text3">생리통/피임약</p>
-            </p>
-            <img class="image3" src="./img/생리통.png">
-            <p class="box4">
-                <p class="text4">피부발진/알러지</p>
-            </p>
-            <img class="image4" src="./img/알러지.png" >
-            <p class="box5">
-                <p class="text5">화상</p>
-            </p>
-            <img class="image5" src="./img/화상.png" >
-            <p class="box6">
-                <p class="text6">결막염/다래끼</p>
-            </p>
-            <img class="image6" src="./img/눈.png">
-            <p class="box7">
-                <p class="text7">코로나</p>
-            </p>
-            <img class="image7" src="./img/코로나.png">
-            <p class="box8">
-                <p class="text8">+기타증상</p>
-            </p>
-            <img class="image8" src="./img/기타.png">
-        </div>  
-        <div class="sideBox">
-            <p class="H">H</p>
-            <p class="A">A</p>
-        </div> 
+        <h2>증상을 선택해주세요.</h2>
+        <p class="normal">일반동물</p>
+        <div class="BoxWrap">
+            <div class="box">
+                <img class="image" src="/static/img/감기.png">
+                <p class="text">감기</p>   
+            </div>
+            <div class="box">
+                <img class="image" src="/static/img/복통.png">
+                <p class="text">복통/소화불량</p>
+            </div>
+            <div class="box">
+                <img class="image" src="/static/img/생리통.png">
+                <p class="text">생리통/피임약</p>
+            </div>
+            <div class="box">
+                <img class="image" src="/static/img/알러지.png">
+                <p class="text">피부발진/알러지</p>
+            </div>
+        </div>
+        <hr class="hr2"/>
+        <p class="special">희귀동물</p>
+        <div class="BoxWrap">
+            <div class="box">
+                <img class="image" src="/static/img/화상.png">
+                <p class="text">화상</p>
+            </div>
+            <div class="box">
+                <img class="image" src="/static/img/눈.png">
+                <p class="text">결막염/다래끼</p>
+            </div>
+            <div class="box">
+                <img class="image" src="/static/img/코로나.png">
+                <p class="text">코로나</p>
+            </div>
+            <div class="box">
+                <img class="image" src="/static/img/기타.png">
+                <p class="text">+기타증상</p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
