--- a/templates/animalMapSearching.html
+++ b/templates/animalMapSearching.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>약국 찾기</title>
     <link rel="stylesheet" href="/static/css/animalMapSearching.css">
+    <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="animalSearch">
         <br>
         <p class="searchQ">현위치에서 가까운 동물약국 찾기</p>
         <br>
-        <input class="searchIn" type="text" placeholder="   현위치를 입력하세요.   ">
-        <br>
+        <div class="ArticleSearch" id="ArticleSearch">
+            <form>
+                <input type="text" id="user-current-point" placeholder="검색어를 입력하세요"/> 
+                <button type="submit"><i class="fa-solid fa-magnifying-glass" style="color: #18A247;"></i></button>
+            </form>
+        </div>
         <br>
         <button class="animalBtn">동물약국</button>
     </div>
