--- a/static/css/header.css
+++ b/static/css/header.css
@@ -145,5 +145,5 @@ nav .MainMenu.active {
     background-color: #E8F6ED;
 }
 .AnimalWrap nav .MainMenu.active {
-    background-color: #E8F6ED;
+    background-color: #E8F6ED
 }
