--- a/templates/mainMap/index_a.html
+++ b/templates/mainMap/index_a.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/static/css/header.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
-    <script src="/static/js/main.js" defer></script>
+    <script src="/static/js/main_a.js" defer></script>
     <script src="/static/js/header.js" defer></script>
 </head>
 <body>
@@ -16,19 +16,42 @@
         <i class="fa-solid fa-universal-access"></i>
         <i class="fa-solid fa-paw"></i>
     </div>
-    <div class="PeopleWrap active" id="PeopleWrap">
+    <div class="AnimalWrap" id="AnimalWrap">
+        <header>
+            <div class="Logo" href="#">
+                <img src="/static/img/logo.png">
+            </div>
+            <div class="Menu">
+                <div class="Tools">
+                    <div class="Search">
+                        <div class="input">
+                            <input type="text" placeholder="검색어를 입력하세요." id="mysearch" />
+                        </div>
+                        <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                    </div>
+                    <p class="signIn">로그인</p>
+                    <p class="signUp">회원가입</p>
+                </div>
+                <nav>
+                    <div class="MainMenu">약국찾기</div>
+                    <div class="MainMenu">보유약국 찾기</div>
+                    <div class="MainMenu">커뮤니티</div>
+                    <div class="MainMenu">구경하기</div>
+                </nav>
+            </div>
+        </header>
         <main>
-            <section class="section Sc1" id="section">
+            <section class="Sc1" id="section">
                 <div class="Main">
                     <div class="Mainintro">
                         <p>갑자기 약이 필요하진 않으신가요?</p>
-                        <p>주변에 약국을 찾기 힘드신가요?</p>
+                        <p>주변에 동물약국을 찾기 힘드신가요?</p>
                     </div>
-                    <p class='MainText' id="MainText">가장 <span>가까운 약국</span>을 찾아드립니다</p>
+                    <p class='MainText' id="MainText">가장 <span>가까운 동물약국</span>을 찾아드립니다</p>
                     <div class="PointEnter" id="PointEnter">
                         <form>
                             <input type="text" id="user-current-point" placeholder="현재 위치를 입력해주세요"/> 
-                            <button type="submit"><img src="/static/img/turndownarrow.svg"></button>
+                            <button type="submit"><img src="/static/img/turndownarrow-a.svg"></button>
                         </form>
                     </div>
                     <div class="downBtn">
@@ -36,7 +59,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section Sc2">
+            <section class="Sc2">
                 <div class="Sub">
                     <div class="SubTopWrap">
                         <div class="SubTitle">
@@ -45,24 +68,24 @@
                         </div>
                         <div class="FindBtn">
                             <p>약국 찾으러 가기</p>
-                            <img src="/static/img/long-arrow.svg">
+                            <img src="/static/img/long-arrow-a.svg">
                         </div>
                     </div>
                     <div class="MoveBtnWrap">
-                        <div class="box">
-                            <img src="/static/img/svg1-remedy.svg">
+                        <div class='box'>
+                            <img src="/static/img/svg1-Veter.svg">
                             <p class="BoxTitle">보유약국 찾기</p>
                             <p class="BoxContent">증상에 맞는 약을 찾아보세요!</p>
                         </div>
-                        <div class="box">
-                            <img src="/static/img/svg2-connect.svg">
+                        <div class='box'>
+                            <img src="/static/img/svg2-connect2.svg">
                             <p class="BoxTitle">같이 얘기하기</p>
-                            <p class="BoxContent">다른 사람들과<br>정보를공유해보세요!</p>
+                            <p class="BoxContent">다른 사람들과<br>정보를 공유해보세요!</p>
                         </div>
-                        <div class="box">
-                            <img src="/static/img/svg3-pharm.svg">
-                            <p class="BoxTitle">약사와 상담하기</p>
-                            <p class="BoxContent">약사선생님의 의견을 들어보는 건<br>어떨까요?</p>
+                        <div class='box'>
+                            <img src="/static/img/svg3-newfunction.svg">
+                            <p class="BoxTitle">제품 구경하기</p>
+                            <p class="BoxContent">동물들에게 필요한 물품들을<br>추천해드려요~</p>
                         </div>
                     </div>
                 </div>
@@ -77,5 +100,3 @@
             </footer>
         </main>
     </div>
-</body>
-</html>
