--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -50,13 +50,10 @@ main{
     display: flex;
 }
 article{
+    display: flex;
+    flex-direction: row;
     width: 800px;
     height: 843px;
-}
-section{
-    width: 800px;
-    height: 185px;
-    border-bottom: 2px solid #dadada;
 }
 .search_txt{
     font-family: 'Pretendard-Medium';
@@ -186,7 +183,7 @@ section{
     font-family: 'Pretendard-SemiBold';
     font-size: 13px;
 }
-#room-name-submit{
+.Chating_Btn{
     width: 40px;
     height: 30px;
     padding: 0;
@@ -203,221 +200,202 @@ section{
 
 
 /* article */
-.Article_Container{
-    margin: 20px;
-    width: 800px;
+ /* 채팅 화면 */
+.Chating_Window{
     display: flex;
     flex-direction: column;
+    margin: 0 10px 0 10px;
+    width: 476px;
+    height: 840px;
+    border: 2px solid #dadada;
 }
-.Article_Nav{
-    border-bottom: 2px solid#CBEAFF;
-    padding: 0 15px 15px 15px;
+.Chating_Tab{
+    position: relative;
+    width: 100px;
+    height: 40px;
+    border: 2px solid #dadada;
+    border-left: none;
+    border-bottom: none;
+    border-top-right-radius: 10px;
 }
-.Article_Nav_Txt1{
-    font-family: 'Pretendard-Medium';
-    font-size: 15px;
-}
-.Article_Nav_Txt2{
-    font-family: 'Pretendard-Bold';
-    font-size: 15px;
-}
-.Article_Nav_Content{
+.Chating_Tab_Name{
+    position: absolute;
     display: flex;
-    justify-content: space-between;
-}
-.Article_Nav_Content_item{
-    text-align: center;
-    justify-content: center;
-}
-.Article_Nav_Content_item_btn{
-    border: 0;
-    padding: 0 15px 0 15px;
-    background-color: white;
-    cursor: pointer;
-    font-family: 'Pretendard-Medium';
-    font-size: 16px;
-}
-.Article_Nav_Content_item_btn:active{
-    color: #005aac;
-    font-family: 'Pretendard-ExtraBold';
-    font-size: 16px;
-}
-.search {
-    position: relative;
-    width: 300px;
-    border-bottom: 2px solid #005aac;
-}
-input {
-    width: 100%;
-    border: none;
-    padding: 10px 12px;
-    font-size: 14px;
-}  
-input:focus{
-    outline: none;
-}
-.search_img {
-    position: absolute;
-    width: 17px;
-    top: 10px;
-    right: 12px;
-    margin: 0;
-}
-
-/* section */
-.Section_Container{
-    width: 800px;
-    height: 740px;
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-.Section_Box{
-    display: flex;
-    width: 800px;
-    height: 185px;
-}
-.porfil_img_Container{
-    position: relative;
-    width: 221px;
-    height: 188px;
-}
-.porfil_img{
-    position: absolute;
-    left: 46px;
-    top: 18px;
-    width: 150px;
-    height: 150px;
-}
-.Section_Box_Container{
-    position: relative;
-    width: 479px;
-    height: 188px;
-}
-.Section_Box_Item{
-    position: absolute;
-    left: 24px;
-    top: 30px;
-}
-.Section_Box_Item_Txt1{
-    font-family: 'Pretendard-SemiBold';
-    font-size: 14px;
-}
-.Section_Box_Item_Txt2{
-    font-family: 'Pretendard-ExtraBold';
-    font-size: 12px;
-    color: #005aac;
-}
-.Section_Box_Item_Txt3{
-    font-family: 'Pretendard-Regular';
-    font-size: 14px;
-}
-.Section_Box_Item_Txt4{
-    font-family: 'Pretendard-ExtraLight';
-    font-size: 12px;
-}
-.Section_Box_Item_Txt5{
-    font-family: 'Pretendard-Bold';
-    font-size: 16px;
-}
-.Section_Box_Item_Txt6{
-    font-family: 'Pretendard-Light';
-    font-size: 14px;
-}
-.Section_Box_Icon_Container{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding-right: 1rem;
-    width: 212px;
-    height: 188px;
-}
-.Section_Box_Bookmark{
-    position: relative;
-}
-.Section_Box_Bookmark_Icon{
-    position: absolute;
-    width: 20px;
-    height: 30px;
-    top: 30px;
-    right: 23px;
-}
-.Booking_Icon{
-    position: absolute;
-    width: 155px;
-    height: 45px;
-    bottom: 25px;
-    border: none;
-    border-radius: 10px;
-    background-color: #005aac;
-    color: white;
-    cursor: pointer;
-}
-
-/* 팝업창 */
-
-.Modal{
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    transform: scale(1.1);
-    transition: visibility 0s linear 0.25s, opacity 0.25s, transform 0.25s;
-}
-/* Modal Content/Box */
-.Modal_Content{
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    box-sizing: content-box;
-    background-color: #fefefe;
+    width: 70px;
+    padding-left: 10px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 470.25px;
-    height: 600px;
-    padding: 1rem 1.5rem;
-    border: 1px solid #888;
-    border-radius: 10px;
+    font-family: 'Pretendard-Medium';
+    font-size: 17px;  
 }
-/* The Close Button */
-.Modal_Close{
+.Chating_Tab_Name_Close{
+    margin-left: 15px;
     color: #aaa;
-    padding-left: 450px;  
-    font-size: 28px;
-    font-weight: bold;
-}
-.Modal_Close:hover, .Modal_Close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-.Modal_Content_Input_Label{
     font-family: 'Pretendard-Medium';
-    font-size: 18px;
+    font-size: 17px;
 }
-.red{
-    font-family: 'Pretendard-Medium';
-    font-size: 18px;
-    color: red;
-}
-/* Modal_Content */
-.Modal_Content_Input{
+.Chating_Status{
     position: relative;
-    width: 450px;
-    height: 40px;
-    padding: 0 5px 0 10px;
-    border: 1px solid gray;
-    border-radius: 5px;
-    margin: 10px 0 20px 0;
-
+    display: flex;
+    flex-direction: row;
+    width: 476px;
+    height: 58px;
+    border: 2px solid #dadada;
+    border-left: none;
+    border-bottom: none;
+}
+.Chating_Icon{
+    position: absolute;
+    top: 50%;
+    left: 2%;
+    transform: translate(0, -50%);
+    width: 36px;
+    height: 36px;
+}
+.Chating_Status_Content{
+    position: absolute;
+    top: 50%;
+    left: 12%;
+    transform: translate(0, -35%);
+    width: 200px;
+    height: 58px;
     font-family: 'Pretendard-Medium';
     font-size: 16px;
+}
+.Chating_Status_Content_S{
+    color: #005aac;
+    font-family: 'Pretendard-SemiBold';
+    font-size: 16px;
+}
+
+#chat-log {
+    width: 476px;
+    height: 546px;
+    border: 2px solid #dadada;
+    border-left: none;
+}
+.Chating_Footer{
+    position: relative;
+    width: 476px;
+    height: 180px;
+}
+.Chating_Message_Input_Container{
+    position: absolute;
+    display: flex;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 450px;
+    height: 115px;
+}
+#chat-message-input{
+    width: 460px;
+    height: 110px;
+    border: 2px solid #dadada;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-right: none;
+}
+#chat-message-submit{
+    border-top: 2px solid #dadada;
+    border-right: 2px solid #dadada;
+    border-bottom: 2px solid #dadada;
+    border-left: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: #CBEAFF;
+    width: 60px;
+    height: 110px;
+    color: white;
+    cursor: pointer;
+    font-family: 'Pretendard-SemiBold';
+    font-size: 14px;
+}
+.Chating_Footer_Icons{
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    top: 83%;
+    left: 3%;
+    width: 90px;
+}
+.Chating_Footer_Icon{
+    width: 24px;
+    height: 24px;
+}
+#room-leave{
+    position: absolute;
+    top: 90%;
+    left: 84%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 30px;
+    border: 1px solid #005aac;
+    border-radius: 5px;
+    background-color: #005aac;
+    color: white;
+    cursor: pointer;
+    font-family: 'Pretendard-SemiBold';
+    font-size: 14px;
+}
+
+ /* 기본 정보 화면 */
+.Imformation_Window{
+    display: flex;
+    flex-direction: column;
+    width: 296px;
+    height: 840px;
+    border: 2px solid #dadada;
+}
+.Imformation_Logo{
+    position: relative;
+    width: 296px;
+    height: 58px;
+    border-bottom: 2px solid #dadada;
+}
+.Imformation_Logo_Container{
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+}
+.Imformation_Logo_Icon{
+    width: 30px;
+    height: 30px;
+}
+.Imformation_Logo_Content{
+    margin-left: 15px;
+    padding-top: 2px;
+    font-family: 'Pretendard-SemiBold';
+    font-size: 20px;
+}
+.Imformation_Basic{
+    position: relative;
+    width: 296px;
+    height: 40px;
+    border-bottom: 2px solid #dadada;
+}
+.Imformation_Basic_Content{
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    font-family: 'Pretendard-Medium';
+    font-size: 16px;
+}
+
+form{
+    margin-top: 15px;
+}
+.Modal_Content_Input_Label{
+    margin-left: 20px;
+    margin-right: 20px;
+    font-family: 'Pretendard-Medium';
+    font-size: 14px;
+    color: gray;
 }
 .Modal_Content_Input_Txt1{
     background: white;
@@ -425,8 +403,8 @@ input:focus{
     background-position: 98% center;
     background-size: 16px;
     background-repeat: no-repeat;
-    width: 450px;
-    height: 40px;
+    width: 150px;
+    height: 25px;
     padding: 0 5px 0 10px;
     border: 1px solid gray;
     border-radius: 5px;
@@ -434,58 +412,17 @@ input:focus{
     outline: none;
 
     font-family: 'Pretendard-Medium';
-    font-size: 16px;
-}
-.text_booking{
-    box-sizing: content-box;
-    display: flex;
-    justify-content: space-between;
-}
-.text_booking_txt{
-    padding-top: 10px;
-}
-label{
-    font-family: 'Pretendard-Medium';
-    font-size: 18px;
-}
-.textLengthWrap{
-    display: flex;
-    color: gray;
-    margin-right: 10px;
-
-    font-family: 'Pretendard-Medium';
-    font-size: 12px;
+    font-size: 14px;
 }
 .Modal_Content_Input_Txt2{
     background: white;
-    width: 450px;
-    height: 150px;
+    width: 250px;
+    height: 400px;
     padding: 10px 5px 0 10px;
     border: 1px solid gray;
     border-radius: 5px;
-    margin: 10px 0 20px 0;
+    margin: 20px 0 20px 13px;
     outline: none;
-
-    font-family: 'Pretendard-Medium';
-    font-size: 16px;
-}
-.Modal_Content_Input_CS{
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    left: 17%;
-    justify-content: space-between;
-    width: 350px;
-}
-.Modal_Content_Input_Cancel{
-    display: block;
-    width: 125px;
-    height: 45px;
-    border: 1px solid gray;
-    border-radius: 5px;
-    background-color: white;
-    color: gray;
-    cursor: pointer;
 
     font-family: 'Pretendard-Medium';
     font-size: 16px;
@@ -495,6 +432,7 @@ label{
     height: 45px;
     border: none;
     border-radius: 5px;
+    margin-left: 75px;
     background-color: #005aac;
     color: white;
     cursor: pointer;
