--- a/templates/social/join.html
+++ b/templates/social/join.html
@@ -1,132 +1,78 @@
-{% load static %}
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입</title>
+    <title>Document</title>
     <link rel="stylesheet" href="/static/css/join.css">
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
-        <div class="content">
-            <!-- HEADER -->
-            <header>
-                <h2>회원가입</h2>
-                <h3>가입을 통해 더 다양한 서비스를 만나보세요!</h3>
-            </header>
-
-            <!-- INPUT -->
-            <section>
-                <form method="post">
-                    {% csrf_token %}
-                    <div class="info" id="info__id">
-                        <div id="id-input">
-                            <input class="box" type="text" name="username" placeholder="아이디 입력(6~20자)"/>
-                            <button id="id-check">중복 확인</button>
-                        </div>
-                        <div class="error-msg"></div>
-                    </div>
-                    <div class="info" id="info__pw">
-                        <input class="box" type="password" name="password1" placeholder="비밀번호 입력 (문자, 숫자, 특수문자 포함 8~20자)"/>
-                        <div class="error-msg"></div>
-                    </div>
-                    <div class="info" id="info__pwRe">
-                        <input class="box" type="password" name="password2" placeholder="비밀번호 재입력"/>
-                        <div class="error-msg"></div>
-                    </div>
-                    <div class="info" id="info__email">
-                        <input class="box" id="email-txt" type="text" name="email" placeholder="이메일 입력"/>
-                        <span>@</span>
-                        <input class="box" id="domain-txt" type="text"/>
-                        <select class="box" id="domain-list">
-                            <option value="type">직접 입력</option>
-                            <option value="naver.com">naver.com</option>
-                            <option value="google.com">google.com</option>
-                            <option value="hanmail.net">hanmail.net</option>
-                            <option value="nate.com">nate.com</option>
-                            <option value="kakao.com">kakao.com</option>
-                        </select>
-                    </div>
-                    <div class="info" id="info__birth">
-                        <div id="birth-flex">
-                            <select class="box" id="birth-year">
-                                <option disabled selected>출생 연도</option>
-                                {% for year in years %}
-                                <option value="{{ year }}">{{ year }}</option>
-                                {% endfor %}
-                            </select>
-                            <select class="box" id="birth-month">
-                                <option disabled selected>월</option>
-                                {% for month in months %}
-                                <option value="{{ month }}">{{ month }}</option>
-                                {% endfor %}
-                            </select>
-                            <select class="box" id="birth-day">
-                                <option disabled selected>일</option>
-                                {% for day in days %}
-                                <option value="{{ day }}">{{ day }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                        <div class="error-msg"></div>
-                    </div>
-                    <div class="info" id="info__mobile">
-                        <input class="box" type="text" name="phone_number" placeholder="휴대폰 번호 입력 (‘-’ 제외 11자리 입력)"/>
-                        <div class="error-msg"></div>
-                    </div>
-                    <div id="result-fail"></div>
-                    <button id="submit">가입하기</button>
-                </form>
-                <div class="exist">
-                    <span>이미 회원이신가요?</span>
-                    <a href="./login.html">로그인 하러가기</a>
-                </div>
-            </section>
+      <div class="content">
+        <!-- HEADER -->
+        <header>
+          <h2>회원가입</h2>
+          <h3>가입을 통해 더 다양한 서비스를 만나보세요!</h3>
+        </header>
+  
+        <!-- INPUT -->
+        <section>
+          <div class="info" id="info__id">
+            <div id="id-input">
+              <input class="box" type="text" placeholder="아이디 입력(6~20자)"/>
+              <button id="id-check">중복 확인</button>
+            </div>
+            <div class="error-msg"></div>
+          </div>
+          <div class="info" id="info__pw">
+            <input class="box" type="password" placeholder="비밀번호 입력 (문자, 숫자, 특수문자 포함 8~20자)"/>
+            <div class="error-msg"></div>
+          </div>
+          <div class="info" id="info__pwRe">
+            <input class="box" type="password" placeholder="비밀번호 재입력"/>
+            <div class="error-msg"></div>
+          </div>
+          <div class="info" id="info__email">
+            <input class="box" id="email-txt" type="text" placeholder="이메일 입력"/>
+            <span>@</span>
+            <input class="box" id="domain-txt" type="text"/>
+            <select class="box" id="domain-list">
+              <option value="type">직접 입력</option>
+              <option value="naver.com">naver.com</option>
+              <option value="google.com">google.com</option>
+              <option value="hanmail.net">hanmail.net</option>
+              <option value="nate.com">nate.com</option>
+              <option value="kakao.com">kakao.com</option>
+            </select>
+          </div>
+          <div class="info" id="info__birth">
+            <div id="birth-flex">
+              <select class="box" id="birth-year">
+                <option disabled selected>출생 연도</option>
+              </select>
+              <select class="box" id="birth-month">
+                <option disabled selected>월</option>
+              </select>
+              <select class="box" id="birth-day">
+                <option disabled selected>일</option>
+              </select>
+            </div>
+            <div class="error-msg"></div>
+          </div>
+          <!-- <div id="print-date"></div> -->
+          <div class="info" id="info__mobile">
+            <input class="box" type="text" placeholder="휴대폰 번호 입력 (‘-’ 제외 11자리 입력)"/>
+            <div class="error-msg"></div>
+          </div>
+        </section>
+        <div id="result-fail"></div>
+        <button id="submit">가입하기</button>
+        <div class="exist">
+          <span>이미 회원이신가요?</span>
+          <a href="./login.html">로그인 하러가기</a>
         </div>
+      </div>
     </div>
-    <script>
-        document.getElementById('domain-list').addEventListener('change', function() {
-            var domain = this.value;
-            if (domain === 'type') {
-                document.getElementById('domain-txt').value = '';
-                document.getElementById('domain-txt').focus();
-            } else {
-                document.getElementById('domain-txt').value = domain;
-            }
-        });
-
-        var birthYearDropdown = document.getElementById('birth-year');
-        var currentYear = new Date().getFullYear();
-        for (var year = 1900; year <= currentYear; year++) {
-            var option = document.createElement('option');
-            option.value = year;
-            option.text = year;
-            birthYearDropdown.appendChild(option);
-        }
-
-        var birthMonthDropdown = document.getElementById('birth-month');
-        for (var month = 1; month <= 12; month++) {
-            var option = document.createElement('option');
-            option.value = month;
-            option.text = month;
-            birthMonthDropdown.appendChild(option);
-        }
-
-        var birthDayDropdown = document.getElementById('birth-day');
-        for (var day = 1; day <= 31; day++) {
-            var option = document.createElement('option');
-            option.value = day;
-            option.text = day;
-            birthDayDropdown.appendChild(option);
-        }
-
-        var currentDate = new Date();
-        birthYearDropdown.value = currentDate.getFullYear();
-        birthMonthDropdown.value = currentDate.getMonth() + 1;
-        birthDayDropdown.value = currentDate.getDate();
-    </script>
-</body>
+  </body>
 </html>
